# kinopoisk

./: README.md  pyproject.toml
movie_app/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
movie_app/migrations/: 0001_initial.py  0002_alter_movie_options_alter_movie_description.py
movie_app/templates/movie_app/: base.html  filter.html  index.html  movie.html  movie_list.html  new_movie.html
server/: settings.py  urls.py
